@@ -602,4 +602,5 @@ BUGFIXES:
 538 ==> 399134 - Progress bar or status when importing from camera/card reader.
 539 ==> 399153 - Selecting a picture with a tag and another without that tag, the checkbox is black instead of gray. 
 540 ==> 384759 - Can't adjust timestamp of RAW files.
-541 ==> 
+541 ==> 399221 - Cannot scroll in videos by clicking on the progress bar (only by moving the progress slider).
+542 ==> 
